DFGCapabilities should not try to get an arguments register from code blocks that don't have one https://bugs.webkit.org/show_bug.cgi?id=87332

Reviewed by Andy Estes.

* dfg/DFGCapabilities.h:
(JSC::DFG::canInlineOpcode):



Canonical link: https://commits.webkit.org/105079@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118310 268f45cc-cd09-0410-ab3c-d52691b4dbfc